# wasntaphoto

./: .coveragerc  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  alembic.ini  app.py  backend_demo.py  docker-compose.sample.yml  gunicorn.conf.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.github/codeql/: codeql-config.yml
.github/workflows/: backend_tests.yml  ci_backend.yml  (+3 more)
alembic/: env.py
api/: comment_api.py  feed_api.py  login_api.py  media_api.py  post_api.py  posts_api.py  search_api.py  user_api.py
db/: engine.py
doc/: api.yaml  classes.mmd  classes.puml
exceptions/: __init__.py  access_denied_error.py  app_error.py  bad_auth_error.py  bad_image_error.py  comment_not_found_error.py  failed_login_error.py  post_not_found_error.py  pwned_password_error.py  self_follow_error.py  session_expired_error.py  user_not_found_error.py  username_already_taken_error.py  weak_password_error.py
initdb/: 01 - initdb.sql
model/: __init__.py  post.py  user.py
providers/: db.py  minio.py  rate_limiting.py  redis.py  repositories.py  services.py
security/: bearer_auth.py  rate_limiting.py
service/: __init__.py  auth_service.py  comment_service.py  image_utils.py  post_service.py  storage_service.py  user_service.py
test/: conftest.py  test_app_lifespan.py  test_auth_service.py  test_comment_api.py  test_feed_api.py  test_health_endpoint.py  test_image_utils.py  test_login_api.py  test_post_api.py  test_providers.py  test_storage_service.py  test_user_api.py
webui/: package-lock.json  package.json  vite.config.js
(+106 files in other folders)
